# nextjs-better-auth-fastapi

./: .env  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  env.example
.cursor/commands/: build-project.md  check-constants.md  clean-project.md  create-backend-migration.md  create-frontend-migration.md  fix-code.md  format-code.md  install-dependencies.md  lint-code.md  lint-format-typecheck.md  run-migrations.md  seed-database.md  start-dev-servers.md  type-check-frontend.md  validate-backend.md  validate-frontend.md
.github/workflows/: ci.yml  docker-build.yml
backend/: .dockerignore  .env  .env.sample  .gitignore  CODING_STANDARDS.md  Dockerfile  README.md  auth.py  config.py  dependencies.py  docker-entrypoint.sh  main.py  middleware.py  pnpm-lock.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f68698c001b_create_tasks_table.py  1ea20e3a0ec8_add_job_history_table.py  54dba3e1d210_fix_chat_tables_timezone_columns.py  580d10c44d94_add_logs_to_job_history.py  6267d9a6a5fb_add_chat_tables.py  75ab1b4039a6_create_tasks_table.py  8993f54d24bd_add_cascade_delete_to_chat_messages.py  dcd897e70fd9_fix_job_history_timezone_columns.py
backend/core/: __init__.py  app.py  auth.py  config.py  constants.py  database.py  exceptions.py  job_operations.py  job_persistence.py  jobs.py  logging.py  middleware.py  permissions.py  security_middleware.py
backend/jobs/: __init__.py  example_jobs.py
backend/models/: __init__.py  chat.py  job_history.py  task.py
backend/routers/: chat.py  example.py  health.py  jobs.py  storage.py  tasks.py
backend/schemas/: __init__.py  chat.py  errors.py  example.py  job.py  storage.py  task.py
backend/scripts/: __init__.py  check_constants.py  migrate.py  reset_db.py  set_minio_policy.py  validate_standards.py
backend/services/: chat_service.py  conversation_service.py  file_service.py  job_history_service.py  job_service.py  storage_service.py  task_service.py
backend/tests/: conftest.py  test_auth.py  test_middleware.py  test_routes.py
backend/utils/: crypto.py  job_event_handlers.py  job_listeners.py  job_log_storage.py  job_registry.py  job_utils.py  job_wrapper.py  sanitization.py
docs/: Migration.md  README.md  api-reference.md  architecture.md  authentication.md  configuration.md  deployment.md  development.md  getting-started.md
nextjs/: .dockerignore  CODING_STANDARDS.md  Dockerfile  README.md  auth-schema.ts  biome.json  docker-entrypoint.sh  drizzle.config.ts  local.db  next.config.ts  package.json  pnpm-lock.yaml
nextjs/.husky/: pre-commit
nextjs/app/: globals.css  layout.tsx  loading.tsx  page.tsx
nextjs/app/admin/: layout-client.tsx  layout.tsx  loading.tsx  page.tsx
nextjs/app/chat/: page.tsx
nextjs/app/dashboard/: layout-client.tsx  layout.tsx  loading.tsx  page.tsx
nextjs/app/forgot-password/: layout.tsx  page.tsx
nextjs/app/login/: layout.tsx  page.tsx
nextjs/app/profile/: layout-client.tsx  layout.tsx  page.tsx
nextjs/app/reset-password/: layout.tsx
nextjs/app/signup/: layout.tsx  page.tsx
nextjs/components/: api-data.tsx  api-key-test.tsx  login-form.tsx  signup-form.tsx  user-profile.tsx  user-sessions.tsx
nextjs/components/admin/: admin-header.tsx  admin-sidebar.tsx  impersonation-indicator.tsx  profile-picture-upload.tsx  user-actions.tsx  user-bulk-actions.tsx  user-details.tsx  user-filters.tsx  user-form.tsx  user-list-utils.ts  user-list.tsx  user-pagination.tsx  user-password-dialog.tsx  user-row.tsx  user-sessions-dialog.tsx
nextjs/components/api-key/: api-key-actions.tsx  api-key-details.tsx  api-key-form-data.ts  api-key-form-helpers.ts  api-key-form-schema.ts  api-key-form-types.ts  api-key-form.tsx  api-key-list.tsx  api-key-verify.tsx  permissions-dialogs.tsx  permissions-editor.tsx  permissions-json-editor.tsx  permissions-resource-card.tsx
nextjs/components/branding/: branding-styles.tsx  logo.tsx
nextjs/components/chat/: chat-container.tsx  chat-header.tsx  chat-input.tsx  chat-message.tsx  chat-sidebar.tsx  chat-thinking.tsx  chat-utils.ts  example-prompts.tsx  use-chat-error.ts  use-chat-scroll.ts
nextjs/components/dashboard/: activity-feed.tsx  metrics-grid.tsx  stats-card.tsx
nextjs/components/jobs/: job-actions.tsx  job-details-dialog.tsx  job-dialog.tsx  job-form-schema.ts  job-form-utils.ts  job-form.tsx  job-history-list.tsx  job-history-page-content.tsx  job-history.tsx  job-list.tsx  job-trigger-fields.tsx  jobs-page-content.tsx
nextjs/components/layout/: main-layout-wrapper.tsx  main-layout.tsx  main-navbar.tsx
nextjs/components/organization/: add-member-dialog.tsx  invitation-actions.tsx  invitation-form.tsx  invitation-list.tsx  member-actions.tsx  member-list.tsx  member-role-selector.tsx  organization-actions.tsx  organization-form.tsx  organization-list.tsx  organization-switcher.tsx  team-actions.tsx  team-form.tsx  team-list.tsx  team-member-actions.tsx  team-member-list.tsx  user-search.tsx
nextjs/components/profile/: change-password-form.tsx  email-verification-section.tsx  passkey-management.tsx  (+2 more)
nextjs/drizzle/: 0000_curly_yellowjacket.sql  0005_nasty_jetstream.sql  0006_huge_legion.sql  0007_deep_cammi.sql
nextjs/lib/: api-client.ts  api-key-client.ts  auth-client.ts  auth-schema.ts  auth.ts  better-auth-service.ts  constants.ts  cookies.ts  database.ts  permission-check-server.ts  permission-check.ts  permissions-api.ts  permissions-utils.ts  permissions.ts  storage-api.ts  utils.ts
nextjs/scripts/: migrate.ts  reset-db.ts  seed-admin.ts  validate-standards.ts
(+178 files in other folders)
