[project]
name = "better-auth-jwt"
version = "0.1.0"
description = "Better Auth JWT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "pyjwt[cryptography]>=2.8.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "cryptography>=46.0.3",
    "aiofiles>=24.1.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "apscheduler>=3.10.0",
    "minio>=7.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
    "ANN", # flake8-annotations (type hints)
    "ASYNC", # flake8-async (async/await patterns)
    "DTZ", # flake8-datetimez (datetime timezone issues)
    "EM",  # flake8-errmsg (error message formatting)
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "PLR2004", # magic value used in comparison
    "TRY301", # abstract raise to inner function (not needed for simple conditional raises)
    "PLR0911", # too many return statements (acceptable in middleware and complex control flow)
    "PT011", # pytest.raises without match
    "Q000", # single quotes found (we use double quotes)
    "Q001", # single quote multiline found
    "Q002", # single quote docstring found
    "Q003", # change outer quotes to avoid escaping inner quotes
]
# Note: PLR0912 (too many branches) and PLR0915 (too many statements) are not ignored
# to encourage code complexity reduction. PLR0913 (too many arguments) is also enforced.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["backend"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["ARG", "PLR2004", "ANN", "S101"]  # allow unused arguments, magic values, missing annotations, and assert in tests
"scripts/**/*.py" = ["ANN", "PLR2004"]  # allow missing annotations and magic values in scripts
"alembic/**/*.py" = ["ANN", "PLR2004"]  # allow missing annotations and magic values in migrations
# Job-related files need Any types for APScheduler compatibility
"core/job_operations.py" = ["ANN401"]  # Any types needed for APScheduler job objects
"services/job_service.py" = ["ANN401"]  # Any types needed for APScheduler job objects
"services/job_history_service.py" = ["ANN401"]  # Any types needed for APScheduler job objects
"utils/job_*.py" = ["ANN401"]  # Any types needed for dynamic job execution and APScheduler compatibility

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
